--- a/config/boards/shields/dactyl_carbonfet/dactyl_carbonfet.conf
+++ b/config/boards/shields/dactyl_carbonfet/dactyl_carbonfet.conf
@@ -1,3 +1,3 @@
-CONFIG_ZMK_DISPLAY=n
-CONFIG_ZMK_KEYBOARD_NAME="DactylCarbonfet"
-CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
